@@ -1,5 +1,6 @@
 package uk.gov.di.ipv.cri.fraud.api.gateway;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.nimbusds.oauth2.sdk.util.StringUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -9,11 +10,13 @@ import uk.gov.di.ipv.cri.fraud.api.domain.check.FraudCheckResult;
 import uk.gov.di.ipv.cri.fraud.api.domain.check.PepCheckResult;
 import uk.gov.di.ipv.cri.fraud.api.gateway.dto.response.*;
 import uk.gov.di.ipv.cri.fraud.api.service.IdentityVerificationInfoResponseValidator;
-import uk.gov.di.ipv.cri.fraud.api.service.IdentityVerificationWarningsErrorsLogger;
+import uk.gov.di.ipv.cri.fraud.api.service.logger.IdentityVerificationResponseLogger;
+import uk.gov.di.ipv.cri.fraud.api.service.logger.IdentityVerificationWarningsErrorsLogger;
 
 import java.time.LocalDate;
 import java.time.YearMonth;
 import java.time.format.DateTimeFormatter;
+import java.time.format.DateTimeParseException;
 import java.time.temporal.ChronoUnit;
 import java.util.*;
 import java.util.stream.Collectors;
@@ -41,10 +44,12 @@ public class IdentityVerificationResponseMapper {
 
     private final EventProbe eventProbe;
 
+    private final IdentityVerificationResponseLogger identityVerificationResponseLogger;
     private final IdentityVerificationWarningsErrorsLogger identityVerificationWarningsErrorsLogger;
 
-    public IdentityVerificationResponseMapper(EventProbe eventProbe) {
+    public IdentityVerificationResponseMapper(EventProbe eventProbe, ObjectMapper objectMapper) {
         this.eventProbe = eventProbe;
+        identityVerificationResponseLogger = new IdentityVerificationResponseLogger(objectMapper);
         identityVerificationWarningsErrorsLogger = new IdentityVerificationWarningsErrorsLogger();
     }
 
@@ -60,6 +65,7 @@ public class IdentityVerificationResponseMapper {
                             mapFraudInfoResponse(
                                     response, new IdentityVerificationInfoResponseValidator());
 
+                    identityVerificationResponseLogger.logResponseFields(response);
                     identityVerificationWarningsErrorsLogger.logAnyWarningsErrors(response);
 
                     return fraudCheckResult;
@@ -80,6 +86,7 @@ public class IdentityVerificationResponseMapper {
                                     replaceWithDefaultErrorValueIfBlank(
                                             responseHeader.getResponseMessage())));
 
+                    identityVerificationResponseLogger.logResponseFields(response);
                     identityVerificationWarningsErrorsLogger.logAnyWarningsErrors(response);
 
                     return fraudCheckResult;
@@ -103,6 +110,7 @@ public class IdentityVerificationResponseMapper {
                             mapPEPInfoResponse(
                                     response, new IdentityVerificationInfoResponseValidator());
 
+                    identityVerificationResponseLogger.logResponseFields(response);
                     identityVerificationWarningsErrorsLogger.logAnyWarningsErrors(response);
 
                     return pepCheckResult;
@@ -123,6 +131,7 @@ public class IdentityVerificationResponseMapper {
                                     replaceWithDefaultErrorValueIfBlank(
                                             responseHeader.getResponseMessage())));
 
+                    identityVerificationResponseLogger.logResponseFields(response);
                     identityVerificationWarningsErrorsLogger.logAnyWarningsErrors(response);
 
                     return pepCheckResult;
@@ -293,8 +302,10 @@ public class IdentityVerificationResponseMapper {
                     "Logging activity history score related value in response {} {}",
                     fieldName,
                     approxDateInYears);
+        } catch (DateTimeParseException e) {
+            LOGGER.warn("Activity history field {} had non-date value {}", fieldName, fieldDate);
         } catch (Exception e) {
-            LOGGER.warn("Invalid value in reponse for {}", fieldName);
+            LOGGER.warn("Invalid value in response for {}", fieldName);
         }
     }
 
@@ -308,19 +319,19 @@ public class IdentityVerificationResponseMapper {
                     YearMonth.parse(LocalDate.now().format(formatter), formatter).toString();
             dataCounts =
                     Arrays.stream(recordDateValues)
+                            .filter(e -> (e != 0)) // Filter out zeroed dates (CC2)
                             .map(x -> YearMonth.parse(x.toString(), formatter).toString())
                             .map(
                                     x ->
                                             ChronoUnit.MONTHS.between(
                                                     YearMonth.parse(x), YearMonth.parse(dateToday)))
                             .map(Math::toIntExact)
-                            .collect(Collectors.toList());
-
+                            .toList();
         } catch (Exception e) {
             LOGGER.warn("Invalid value in response for activity history score date");
         }
         int oldestDate = 0; // Set to 0, if all dates are null then this will make the score 0
-        if (dataCounts.size() > 0) {
+        if (!dataCounts.isEmpty()) {
             oldestDate = Collections.max(dataCounts);
         }
         return oldestDate;
